src/components/Header/styles.scss
@import "../../styles/theme";

.header {
  height: $header-height;
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  width: 100%;
  background-color: white;
  z-index: 90;
  * {
    box-sizing: border-box;
  }
  .h-content {
    height: 100%;
    max-width: $max-body-width;
    width: 100%;
    padding: 10px $side-padding-page;
    display: flex;
    flex-direction: row;
    .h-side {
      display: flex;
      flex: 1;
    }
  }
}

@media only screen and (max-width: $mobile-max-width) {
  .header {
    height: $mobile-header-height;
    .h-content {
      padding: 10px $mobile-side-padding-page;
      .h-right {
        display: none;
      }
    }
  }
}

